them tab headphone ,watch...

--- a/pages/Headphone/all_headphone.html
+++ b/pages/Headphone/all_headphone.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Phụ kiện máy tính bảng -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
+    <title>Tai nghe -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../../css/reponsive.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/tablet-css/phukienTab.css">
+    <link rel="stylesheet" href="../../css/headphone-css/all_headphone.css">
     <!-- <link rel="stylesheet" href="../../css/mobile-css/galaxyS.css"> -->
     <link rel="stylesheet" href="../../img/">
     <link rel="stylesheet" href="../../fonts/themify-icons/themify-icons.css">
@@ -479,6 +479,8 @@
             </div>
         </div>
     </div>
+
+    
     <!-- End header -->
 
     <!-- Content -->
@@ -486,8 +488,8 @@
     <div class="banner-z">
         <div class="text-z">
             <div class="content-text">
-                <h2 style="text-transform: capitalize">Phụ kiện máy tính bảng</h2>
-                <!-- <p style="font-size: 14px;">Được tạo ra để mang lại sự hoành tráng mỗi ngày</p> -->
+                <h2 style="font-weight:700; font-size: 32px ">Galaxy Buds2</h2>
+                <p style="font-weight: 400; font-size: 14px ;">Chống ồn vượt bậc.Phiêu nhạc siêu chất </p>
             </div>
         </div>
     </div>
@@ -497,53 +499,13 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/phuKienMB/backup-charger.png" alt="">
+                    <img src="../../img/head_phone/page-headphone/GalayyBuds/budlive.png" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3"
-                        style="white-space: nowrap; 
-                        width: 200px; 
-                        overflow: hidden; 
-                        text-overflow: ellipsis;
-                        margin-left: 34px;">
-                            Sạc dự phòng <br>Samsung10.000mAh (Hồng, type C)</p>
-                        <div class="sale" style="display: flex; margin-left: 24%;">
-                            <div class="cost-old" style="margin-right: 4px; text-decoration-line: line-through; color: #ccc;">
-                                <p class="cost-phone mt-3">350.000₫ </p>
-                            </div>
-                            <div class="cost-new">
-                                <p class="cost-phone mt-3 "> 319.000₫</p>
-                            </div>
-                        </div>
-                        <button class="more-phone mb-3">Xem chi tiết</button>
-                    </div>
-
-                    <div class="button-z">
-
-                    </div>
-                </div>
-            </div>
-        </a>
-
-        <a href="">
-
-            <div class="list-phone">
-                <div class="img-phone text-center">
-                    <img src="../../img/tab/page-tablet/phukienTab/149aa2ac40ac0cbc6897ca69d57ae3c3.vn-45w-power-adapter-ep-t4510-ep-t4510xbegww-530965941.png" alt="">
-                </div>
-
-                <div class="buy-phone text-center">
-                    <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3"
-                        style="white-space: nowrap; 
-                        width: 200px; 
-                        overflow: hidden; 
-                        text-overflow: ellipsis;
-                        margin-left: 34px;">
-                        Củ sạc Type C Samsung T4510 <br> 45W đen (Kèm cáp C-C 5A, 1.8m)</p>
-                        <p class="cost-phone cost-phone-mb mt-3 mb-3">2.000.000₫</p>
+                        <p class="name-phone mt-3 mb-3">Galaxy Bud Live </p>
+                        <p class="cost-phone mt-3 mb-3 ">1.350.000₫</p>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
@@ -554,19 +516,18 @@
             </div>
         </a>
 
-
         <a href="">
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/phuKienMB/15W-typeC.png" alt="">
+                    <img src="../../img/head_phone/page-headphone/GalayyBuds/bud2.jpg" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Bộ sạc 15W Type C</p>
-                        <p class="cost-phone cost-phone-mb mt-3 mb-5">290.000₫</p>
-                        <button class="more-phone mt-4 mb-3">Xem chi tiết</button>
+                        <p class="name-phone mt-3 mb-3">Galaxy Buds2  </p>
+                        <p class="cost-phone mt-3 mb-3 ">2.590.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
                     <div class="button-z">
@@ -575,20 +536,18 @@
                 </div>
             </div>
         </a>
-
-
         <a href="">
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/phuKienMB/25W.png" alt="">
+                    <img src="../../img/head_phone/page-headphone/GalayyBuds/budspro.jpg" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Bộ sạc nhanh 25W</p>
-                        <p class="cost-phone cost-phone-mb mt-3 mb-5"> 390.000₫</p>
-                        <button class="more-phone mt-4 mb-3">Xem chi tiết</button>
+                        <p class="name-phone mt-3 mb-3">Galaxy Buds Pro</p>
+                        <p class="cost-phone mt-3 mb-3 ">3.690.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
                     <div class="button-z">
@@ -597,30 +556,173 @@
                 </div>
             </div>
         </a>
-
-        <a href="">
-
-            <div class="list-phone">
-                <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/phuKienMB/penSPro.png" alt="">
-                </div>
-
-                <div class="buy-phone text-center">
-                    <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Bút S Pen Pro</p>
-                        <p class="cost-phone cost-phone-mb mt-3 mb-5">2.000.000₫</p>
-                        <button class="more-phone mt-4 mb-3">Xem chi tiết</button>
-                    </div>
-
-                    <div class="button-z">
-
-                    </div>
-                </div>
-            </div>
-        </a>
-
     </div>
 
+<div class="banner-z">
+        <div class="text-z">
+            <div class="content-text">
+                <h2 style="font-weight:720; font-size: 32px ">Tai nghe AKG</h2>
+                <p style="font-size: 32px ;">Âm thanh studio thuần khiết </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="lists-phone">
+        <a href="">
+
+            <div class="list-phone">
+                <div class="img-phone text-center">
+                    <img src="../../img/head_phone/page-headphone/AKG/AKG-TypeC.png" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Tai nghe AKG Type C </p>
+                        <p class="cost-phone mt-3 mb-3 ">559.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+
+        <a href="">
+
+            <div class="list-phone">
+                <div class="img-phone text-center">
+                    <img src="../../img/head_phone/page-headphone/AKG/AKG-Ia500.png" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Tai nghe có dây 3.5 mm (EO - IA 500) </p>
+                        <p class="cost-phone mt-3 mb-3 ">300.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="banner-z">
+        <div class="text-z">
+            <div class="content-text">
+                <h2 style="font-weight:720; font-size: 32px ">Bộ sạc</h2>
+                <p style="font-size: 32px ;">Giúp thiết bị của bạn hoạt động tốt </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="lists-phone">
+        <a href="">
+
+            <div class="list-phone">
+                <div class="img-phone text-center">
+                    <img src="../../img/head_phone/page-headphone/all-headphone/10000mAh.png" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Sạc dự phòng Samsung10000mAh </p>
+                        <p class="cost-phone mt-3 mb-3 ">319.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+
+        <a href="">
+
+            <div class="list-phone">
+                <div class="img-phone text-center">
+                    <img src="../../img/head_phone/page-headphone/all-headphone/45W.png" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Củ sạc Type C Samsung T4510 45W đen(Kèm cáp C-C 5A) </p>
+                        <p class="cost-phone mt-3 mb-3 ">990.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a href="">
+
+            <div class="list-phone">
+                <div class="img-phone text-center">
+                    <img src="../../img/head_phone/page-headphone/all-headphone/15WtypeC.png" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Bộ sạc 15W Type C </p>
+                        <p class="cost-phone mt-3 mb-3 ">Giá từ : 290.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a href="">
+
+            <div class="list-phone">
+                <div class="img-phone text-center">
+                    <img src="../../img/head_phone/page-headphone/all-headphone/25WtypeC.png" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Bộ sạc nhanh 25W </p>
+                        <p class="cost-phone mt-3 mb-3 ">Giá từ :390.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a href="">
+
+            <div class="list-phone">
+                <div class="img-phone text-center">
+                    <img src="../../img/head_phone/page-headphone/all-headphone/xehoi.png" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Sạc đôi xe hơi (45W,15W) </p>
+                        <p class="cost-phone mt-3 mb-3 ">790.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+        
+    </div>
     <!-- End content-->
 
     <!-- footer -->
