--- a/pages/Mobile/galaxyA.html
+++ b/pages/Mobile/galaxyA.html
@@ -95,9 +95,11 @@
                                         Đồng hồ
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item" href="#">Galaxy Watch 4</a></li>
-                                        <li><a class="dropdown-item" href="#">Galaxy Watch 4 Classic</a></li>
-                                        <li><a class="dropdown-item" href="#">Galaxy Fit</a></li>
+                                        <li><a class="dropdown-item" href="../Smart-watch/galaxywatch4.html">Galaxy Watch 4</a></li>
+                                        <li><a class="dropdown-item" href="../Smart-watch/galaxywatch4classic.html">Galaxy Watch 4 Classic</a></li>
+                                        <li><a class="dropdown-item" href="../Smart-watch/galaxyfit.html">Galaxy Fit</a></li>
+                                        <li><a class="dropdown-item" href="../Smart-watch/more_watch.html">Phụ kiện </a></li>
+                                        <li><a class="dropdown-item" href="../Smart-watch/all_watch.html">Xem đồng hồ</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -109,9 +111,9 @@
                                         Phụ kiện
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item" href="#">Phụ kiện kiện máy tính bảng</a></li>
-                                        <li><a class="dropdown-item" href="#">Phụ kiện điện thoại thông minh</a></li>
-                                        <li><a class="dropdown-item" href="#">Tất cả phụ kiện</a></li>
+                                        <li><a class="dropdown-item" href="../Accessory/tab.html">Phụ kiện kiện máy tính bảng</a></li>
+                                        <li><a class="dropdown-item" href="../Accessory/phone.html">Phụ kiện điện thoại thông minh</a></li>
+                                        <li><a class="dropdown-item" href="../Accessory/all.html">Tất cả phụ kiện</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -123,9 +125,9 @@
                                         Tai nghe
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item" href="#">Galaxy Buds</a></li>
-                                        <li><a class="dropdown-item" href="#">Tai nghe AKG</a></li>
-                                        <li><a class="dropdown-item" href="#">Tất cả tai nghe/a></li>
+                                        <li><a class="dropdown-item" href="../Headphone/galaxyBuds.html">Galaxy Buds</a></li>
+                                        <li><a class="dropdown-item" href="../Headphone/AKG.html">Tai nghe AKG</a></li>
+                                        <li><a class="dropdown-item" href="../Headphone/all_headphone.html">Tất cả tai nghe/a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -143,7 +145,6 @@
 
         </nav>
     </div>
-
     <!-- Header PC, Tablet-->
     <div class="main-nav">
         <div class="logo">
@@ -215,7 +216,7 @@
                     <img src="../../img/phone/galaxyZ.png" alt="" style="width: 82px; height: 86px; margin: 5px 8px;">
                     <div class="text_list" style="margin-top: 20px">
                         <div class="text_list1">
-                            <a href="./galaxyZ.html" style="font-size: 16px; top: -8px;">Galaxy Z</a>
+                            <a href="../Mobile/galaxyZ.html" style="font-size: 16px; top: -8px;">Galaxy Z</a>
 
                         </div>
                         <div class="text_list2">
@@ -228,7 +229,7 @@
                             style="width: 48px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="./galaxyS.html" style="font-size: 16px; top: -8px;">Galaxy
+                                <a href="../Mobile/galaxyS.html" style="font-size: 16px; top: -8px;">Galaxy
                                     S</a>
                             </div>
                             <div class="text_list2">
@@ -242,7 +243,7 @@
                             style="width: 48px; height: 86px;  margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="./galaxyA.html" style="font-size: 16px; top: -8px;">Galaxy
+                                <a href="../Mobile/galaxyA.html" style="font-size: 16px; top: -8px;">Galaxy
                                     A</a>
                             </div>
                             <div class="text_list2">
@@ -257,7 +258,7 @@
                             style="width: 88px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="./phuKienMB.html" style="font-size: 16px; top: -8px;">Phụ kiện</a>
+                                <a href="../Mobile/phuKienMB.html" style="font-size: 16px; top: -8px;">Phụ kiện</a>
 
                             </div>
                             <div class="text_list2">
@@ -334,7 +335,7 @@
                     <img src="../../img/watch/watch4.png" alt="" style="width: 60px; height: 78px; margin: 5px 8px;">
                     <div class="text_list" style="margin-top: 20px">
                         <div class="text_list1">
-                            <a href="#" style="font-size: 16px; top: -8px;">Galaxy Watch 4</a>
+                            <a href="../Smart-watch/galaxywatch4.html" style="font-size: 16px; top: -8px;">Galaxy Watch 4</a>
 
                         </div>
                         <div class="text_list2">
@@ -347,7 +348,7 @@
                             style="width: 48px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Galaxy Watch 4 classic</a>
+                                <a href="../Smart-watch/galaxywatch4classic.html" style="font-size: 16px; top: -8px;">Galaxy Watch 4 classic</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 182px;">Một tác phẩm kinh điển thực sự vượt thời gian</p>
@@ -359,7 +360,7 @@
                         <img src="../../img/watch/fit.png" alt="" style="width: 35px; height: 86px;  margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Galaxy Fit</a>
+                                <a href="../Smart-watch/galaxyfit.html" style="font-size: 16px; top: -8px;">Galaxy Fit</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 200px">Tăng cường sức khỏe của bạn</p>
@@ -372,7 +373,7 @@
                             style="width: 48px; height: 86px;  margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Phụ kiện</a>
+                                <a href="../Smart-watch/more_watch.html" style="font-size: 16px; top: -8px;">Phụ kiện</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 200px">Dây đai, bộ sạc và hơn thế nữa</p>
@@ -385,7 +386,7 @@
                             style="width: 86px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Xem đồng hồ</a>
+                                <a href="../Smart-watch/all_watch.html" style="font-size: 16px; top: -8px;">Xem đồng hồ</a>
                             </div>
                             <div class="text_list2">
                                 <p>Xem tất cả đồng hồ của samcenter</p>
@@ -403,7 +404,7 @@
                     <img src="../../img/head_phone/buds.png" alt="" style="width: 82px; height: 86px; margin: 5px 8px;">
                     <div class="text_list" style="margin-top: 20px">
                         <div class="text_list1">
-                            <a href="#" style="font-size: 16px; top: -8px;">Galaxy Buds</a>
+                            <a href="../Headphone/galaxyBuds.html" style="font-size: 16px; top: -8px;">Galaxy Buds</a>
                         </div>
                         <div class="text_list2">
                             <p style="width: 140px;">Âm thanh cân bằng và độ vừa vặn thoải mái</p>
@@ -415,7 +416,7 @@
                             style="width: 58px; height: 86px;  margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Tai nghe AKG</a>
+                                <a href="../Headphone/AKG.html" style="font-size: 16px; top: -8px;">Tai nghe AKG</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 200px">Âm thanh chất lượng studio</p>
@@ -428,7 +429,7 @@
                             style="width: 88px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Tất cả tai nghe</a>
+                                <a href="../Headphone/all_headphone.html" style="font-size: 16px; top: -8px;">Tất cả tai nghe</a>
 
                             </div>
                             <div class="text_list2">
@@ -447,7 +448,7 @@
                     <img src="../../img/more/pk_mb.png" alt="" style="width: 82px; height: 86px; margin: 5px 8px;">
                     <div class="text_list" style="margin-top: 20px">
                         <div class="text_list1">
-                            <a href="#" style="font-size: 16px; top: -8px;">Phụ kiện điện thoại thông minh</a>
+                            <a href="../Accessory/phone.html" style="font-size: 16px; top: -8px;">Phụ kiện điện thoại thông minh</a>
                         </div>
                         <div class="text_list2">
                             <p style="width: 140px;">Ốp lưng và hơn thế nữa</p>
@@ -459,7 +460,7 @@
                             style="width: 72px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Phụ kiện máy tính bảng</a>
+                                <a href="../Accessory/tab.html" style="font-size: 16px; top: -8px;">Phụ kiện máy tính bảng</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 182px;">Bao da và hơn thế nữa</p>
@@ -472,7 +473,7 @@
                             style="width: 70px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Tất cả phụ kiện</a>
+                                <a href="../Accessory/all.html" style="font-size: 16px; top: -8px;">Tất cả phụ kiện</a>
 
                             </div>
                             <div class="text_list2">
