--- a/pages/Smart-watch/galaxywatch4classic.html
+++ b/pages/Smart-watch/galaxywatch4classic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Phụ kiện máy tính bảng -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
+    <title>Galaxy Watch4 Classic -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../../css/reponsive.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/tablet-css/phukienTab.css">
+    <link rel="stylesheet" href="../../css/watch-css/watch4classic.css">
     <!-- <link rel="stylesheet" href="../../css/mobile-css/galaxyS.css"> -->
     <link rel="stylesheet" href="../../img/">
     <link rel="stylesheet" href="../../fonts/themify-icons/themify-icons.css">
@@ -486,7 +486,7 @@
     <div class="banner-z">
         <div class="text-z">
             <div class="content-text">
-                <h2 style="text-transform: capitalize">Phụ kiện máy tính bảng</h2>
+                <h2>Galaxy Watch4 Classic </h2>
                 <!-- <p style="font-size: 14px;">Được tạo ra để mang lại sự hoành tráng mỗi ngày</p> -->
             </div>
         </div>
@@ -497,27 +497,14 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/phuKienMB/backup-charger.png" alt="">
+                    <img src="../../img/watch/page-watch/Watch4_classic/R890.png" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3"
-                        style="white-space: nowrap; 
-                        width: 200px; 
-                        overflow: hidden; 
-                        text-overflow: ellipsis;
-                        margin-left: 34px;">
-                            Sạc dự phòng <br>Samsung10.000mAh (Hồng, type C)</p>
-                        <div class="sale" style="display: flex; margin-left: 24%;">
-                            <div class="cost-old" style="margin-right: 4px; text-decoration-line: line-through; color: #ccc;">
-                                <p class="cost-phone mt-3">350.000₫ </p>
-                            </div>
-                            <div class="cost-new">
-                                <p class="cost-phone mt-3 "> 319.000₫</p>
-                            </div>
-                        </div>
-                        <button class="more-phone mb-3">Xem chi tiết</button>
+                        <p class="name-phone mt-3 mb-3">Galaxy Watch4 Classic BT 46mm - Đen - (R890)</p>
+                        <p class="cost-phone mt-3 mb-3 ">6.640.000₫</p>
+                        <button class="more-phonemt mt-5 mb-3">Xem chi tiết</button>
                     </div>
 
                     <div class="button-z">
@@ -531,19 +518,13 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/tab/page-tablet/phukienTab/149aa2ac40ac0cbc6897ca69d57ae3c3.vn-45w-power-adapter-ep-t4510-ep-t4510xbegww-530965941.png" alt="">
+                    <img src="../../img/watch/page-watch/Watch4_classic/R880.png" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3"
-                        style="white-space: nowrap; 
-                        width: 200px; 
-                        overflow: hidden; 
-                        text-overflow: ellipsis;
-                        margin-left: 34px;">
-                        Củ sạc Type C Samsung T4510 <br> 45W đen (Kèm cáp C-C 5A, 1.8m)</p>
-                        <p class="cost-phone cost-phone-mb mt-3 mb-3">2.000.000₫</p>
+                        <p class="name-phone mt-3 mb-3">Galaxy Watch4 Classic BT 42mm - Bạc - (R880)</p>
+                        <p class="cost-phone mt-3 mb-3"> 6.165.000₫</p>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
@@ -554,19 +535,18 @@
             </div>
         </a>
 
-
         <a href="">
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/phuKienMB/15W-typeC.png" alt="">
+                    <img src="../../img/watch/page-watch/Watch4_classic/R885.png" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Bộ sạc 15W Type C</p>
-                        <p class="cost-phone cost-phone-mb mt-3 mb-5">290.000₫</p>
-                        <button class="more-phone mt-4 mb-3">Xem chi tiết</button>
+                        <p class="name-phone mt-3 mb-3">Galaxy Watch4 Classic LTE 42mm - (R885)</p>
+                        <p class="cost-phone mt-3 mb-3"> 7.115.000₫</p>
+                        <button class="more-phone mt-5 mb-3">Xem chi tiết</button>
                     </div>
 
                     <div class="button-z">
@@ -576,48 +556,7 @@
             </div>
         </a>
 
-
-        <a href="">
-
-            <div class="list-phone">
-                <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/phuKienMB/25W.png" alt="">
-                </div>
-
-                <div class="buy-phone text-center">
-                    <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Bộ sạc nhanh 25W</p>
-                        <p class="cost-phone cost-phone-mb mt-3 mb-5"> 390.000₫</p>
-                        <button class="more-phone mt-4 mb-3">Xem chi tiết</button>
-                    </div>
-
-                    <div class="button-z">
-
-                    </div>
-                </div>
-            </div>
-        </a>
-
-        <a href="">
-
-            <div class="list-phone">
-                <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/phuKienMB/penSPro.png" alt="">
-                </div>
-
-                <div class="buy-phone text-center">
-                    <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Bút S Pen Pro</p>
-                        <p class="cost-phone cost-phone-mb mt-3 mb-5">2.000.000₫</p>
-                        <button class="more-phone mt-4 mb-3">Xem chi tiết</button>
-                    </div>
-
-                    <div class="button-z">
-
-                    </div>
-                </div>
-            </div>
-        </a>
+       
 
     </div>
 
