--- a/pages/Accessory/all.html
+++ b/pages/Accessory/all.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Phụ kiện máy tính bảng -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
+    <title>Phụ kiện -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../../css/reponsive.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/tablet-css/phukienTab.css">
+    <link rel="stylesheet" href="../../css/mobile-css/phuKienMB.css">
     <!-- <link rel="stylesheet" href="../../css/mobile-css/galaxyS.css"> -->
     <link rel="stylesheet" href="../../img/">
     <link rel="stylesheet" href="../../fonts/themify-icons/themify-icons.css">
@@ -486,8 +486,8 @@
     <div class="banner-z">
         <div class="text-z">
             <div class="content-text">
-                <h2 style="text-transform: capitalize">Phụ kiện máy tính bảng</h2>
-                <!-- <p style="font-size: 14px;">Được tạo ra để mang lại sự hoành tráng mỗi ngày</p> -->
+                <h2 style="text-transform: capitalize">Ốp lưng điện thoại </h2>
+                <p style="font-size: 14px;">Lựa chọn sành điệu để bảo vệ điện thoại của bạn</p>
             </div>
         </div>
     </div>
@@ -502,7 +502,7 @@
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3"
+                        <p class="name-phone mt-3 mb-3"
                         style="white-space: nowrap; 
                         width: 200px; 
                         overflow: hidden; 
@@ -511,13 +511,13 @@
                             Sạc dự phòng <br>Samsung10.000mAh (Hồng, type C)</p>
                         <div class="sale" style="display: flex; margin-left: 24%;">
                             <div class="cost-old" style="margin-right: 4px; text-decoration-line: line-through; color: #ccc;">
-                                <p class="cost-phone mt-3">350.000₫ </p>
+                                <p class="cost-phone mt-3 mb-3">350.000₫ </p>
                             </div>
                             <div class="cost-new">
-                                <p class="cost-phone mt-3 "> 319.000₫</p>
+                                <p class="cost-phone mt-3 mb-3 "> 319.000₫</p>
                             </div>
                         </div>
-                        <button class="more-phone mb-3">Xem chi tiết</button>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
                     <div class="button-z">
@@ -531,19 +531,22 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/tab/page-tablet/phukienTab/149aa2ac40ac0cbc6897ca69d57ae3c3.vn-45w-power-adapter-ep-t4510-ep-t4510xbegww-530965941.png" alt="">
-                </div>
+                    <img src="../../img/phone/page-phone/phuKienMB/S22.png" alt="">                </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
                         <p class="name-phone mt-3 mb-3"
                         style="white-space: nowrap; 
-                        width: 200px; 
+                        width: 240px; 
                         overflow: hidden; 
                         text-overflow: ellipsis;
-                        margin-left: 34px;">
-                        Củ sạc Type C Samsung T4510 <br> 45W đen (Kèm cáp C-C 5A, 1.8m)</p>
-                        <p class="cost-phone cost-phone-mb mt-3 mb-3">2.000.000₫</p>
+                        margin-left: 8px;">
+                            Ốp lưng Silicone kèm dây đeo <br> Galaxy S22 5G</p>
+                        <div class="sale" style="display: flex; margin-left: 24%;">
+                            <div class="cost-new">
+                                <p class="cost-phone mt-3 mb-3 " style="margin-left:24px ;"> 499.000₫</p>
+                            </div>
+                        </div>
                         <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
@@ -554,6 +557,146 @@
             </div>
         </a>
 
+        <a href="">
+
+            <div class="list-phone">
+                <div class="img-phone text-center">
+                    <img src="../../img/phone/page-phone/phuKienMB/screen-protector.png" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3"
+                        style="white-space: nowrap; 
+                        width: 240px; 
+                        overflow: hidden; 
+                        text-overflow: ellipsis;
+                        margin-left: 8px;">
+                            Miếng dán màn hình Galaxy <br> S22+ 5G   </p>
+                        <div class="sale" style="display: flex; margin-left: 24%;">
+                            <div class="cost-old" style="margin-right: 4px; text-decoration-line: line-through; color: #ccc;">
+                                <p class="cost-phone mt-3 mb-3">250.000₫ </p>
+                            </div>
+                            <div class="cost-new">
+                                <p class="cost-phone mt-3 mb-3 "> 249.000₫</p>
+                            </div>
+                        </div>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+
+        <a href="">
+
+            <div class="list-phone">
+                <div class="img-phone text-center">
+                    <img src="../../img/phone/page-phone/phuKienMB/screen-protector.png" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3"
+                        style="white-space: nowrap; 
+                        width: 240px; 
+                        overflow: hidden; 
+                        text-overflow: ellipsis;
+                        margin-left: 8px;">
+                            Miếng dán màn hình Galaxy <br> S22 Ultra 5G   </p>
+                        <div class="sale" style="display: flex; margin-left: 24%;">
+                            <div class="cost-new">
+                                <p class="cost-phone mt-3 mb-3 " style="margin-left:28px ;"> 299.000₫</p>
+                            </div>
+                        </div>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+
+        <a href="">
+
+            <div class="list-phone">
+                <div class="img-phone text-center">
+                    <img src="../../img/phone/page-phone/phuKienMB/screen-protector.png" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3"
+                        style="white-space: nowrap; 
+                        width: 240px; 
+                        overflow: hidden; 
+                        text-overflow: ellipsis;
+                        margin-left: 8px;">
+                            Miếng dán màn hình Galaxy <br> S22 5G   </p>
+                        <div class="sale" style="display: flex; margin-left: 24%;">
+                            <div class="cost-old" style="margin-right: 4px; text-decoration-line: line-through; color: #ccc;">
+                                <p class="cost-phone mt-3 mb-3">250.000₫ </p>
+                            </div>
+                            <div class="cost-new">
+                                <p class="cost-phone mt-3 mb-3 "> 199.000₫</p>
+                            </div>
+                        </div>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+
+        <a href="">
+
+            <div class="list-phone">
+                <div class="img-phone text-center">
+                    <img src="../../img/phone/page-phone/phuKienMB/Fold3-5G.png" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Bao da Clear View S22 5G</p>
+                        <p class="cost-phone cost-phone-mb mt-3 mb-3">990.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
+
+        <a href="">
+
+            <div class="list-phone">
+                <div class="img-phone text-center">
+                    <img src="../../img/phone/page-phone/phuKienMB/Fold3-5G.png" alt="">
+                </div>
+
+                <div class="buy-phone text-center">
+                    <div class="infor-phone">
+                        <p class="name-phone mt-3 mb-3">Bao da Galaxy S22 5G</p>
+                        <p class="cost-phone cost-phone-mb mt-3 mb-3">990.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
+                    </div>
+
+                    <div class="button-z">
+
+                    </div>
+                </div>
+            </div>
+        </a>
 
         <a href="">
 
@@ -565,8 +708,8 @@
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
                         <p class="name-phone mt-3 mb-3">Bộ sạc 15W Type C</p>
-                        <p class="cost-phone cost-phone-mb mt-3 mb-5">290.000₫</p>
-                        <button class="more-phone mt-4 mb-3">Xem chi tiết</button>
+                        <p class="cost-phone cost-phone-mb mt-3 mb-3">290.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
                     <div class="button-z">
@@ -587,8 +730,8 @@
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
                         <p class="name-phone mt-3 mb-3">Bộ sạc nhanh 25W</p>
-                        <p class="cost-phone cost-phone-mb mt-3 mb-5"> 390.000₫</p>
-                        <button class="more-phone mt-4 mb-3">Xem chi tiết</button>
+                        <p class="cost-phone cost-phone-mb mt-3 mb-3"> 390.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
                     <div class="button-z">
@@ -602,14 +745,14 @@
 
             <div class="list-phone">
                 <div class="img-phone text-center">
-                    <img src="../../img/phone/page-phone/phuKienMB/penSPro.png" alt="">
+                    <img src="../../img/phone/page-phone/phuKienMB/FE-5G-ClearCover.png" alt="">
                 </div>
 
                 <div class="buy-phone text-center">
                     <div class="infor-phone">
-                        <p class="name-phone mt-3 mb-3">Bút S Pen Pro</p>
-                        <p class="cost-phone cost-phone-mb mt-3 mb-5">2.000.000₫</p>
-                        <button class="more-phone mt-4 mb-3">Xem chi tiết</button>
+                        <p class="name-phone mt-3 mb-3">Galaxy S21 FE 5G Clear Cover</p>
+                        <p class="cost-phone cost-phone-mb mt-3 mb-3">790.000₫</p>
+                        <button class="more-phone mt-3 mb-3">Xem chi tiết</button>
                     </div>
 
                     <div class="button-z">
