--- a/pages/Tablet/tabA.html
+++ b/pages/Tablet/tabA.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Galaxy Tab A - SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
+    <title>Galaxy Tab A -SamCenter - Hệ thống bán lẻ ủy quyền của Samsung</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -63,12 +63,13 @@
                                         Di động
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item" href="../Mobile/galaxyZ.html">Galaxy Z</a>
+                                        <li><a class="dropdown-item" href="./galaxyZ.html">Galaxy Z</a>
                                         </li>
-                                        <li><a class="dropdown-item" href="../Mobile/galaxyS.html">Galaxy S</a>
+                                        <li><a class="dropdown-item" href="./galaxyS.html">Galaxy S</a>
                                         </li>
-                                        <li><a class="dropdown-item" href="../Mobile/galaxyA.html">Galaxy A</a></li>
-                                        <li><a class="dropdown-item" href="../Mobile/phuKienMB.html">Phụ kiện</a></li>
+                                        <li><a class="dropdown-item" href="./galaxyA.html">Galaxy A</a>
+                                        </li>
+                                        <li><a class="dropdown-item" href="./phuKienMB.html">Phụ kiện</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -80,9 +81,9 @@
                                         Máy tính bảng
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item" href="./tabA.html">Galaxy Tab A</a></li>
-                                        <li><a class="dropdown-item" href="./tabS.html">Galaxy Tab S</a></li>
-                                        <li><a class="dropdown-item" href="./phukienTab.html">Phụ kiện</a></li>
+                                        <li><a class="dropdown-item" href="../Tablet/tabA.html">Galaxy Tab A</a></li>
+                                        <li><a class="dropdown-item" href="../Tablet/tabS.html">Galaxy Tab S</a></li>
+                                        <li><a class="dropdown-item" href="../Tablet/phukienTab.html">Phụ kiện</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -94,9 +95,11 @@
                                         Đồng hồ
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item" href="#">Galaxy Watch 4</a></li>
-                                        <li><a class="dropdown-item" href="#">Galaxy Watch 4 Classic</a></li>
-                                        <li><a class="dropdown-item" href="#">Galaxy Fit</a></li>
+                                        <li><a class="dropdown-item" href="../Smart-watch/galaxywatch4.html">Galaxy Watch 4</a></li>
+                                        <li><a class="dropdown-item" href="../Smart-watch/galaxywatch4classic.html">Galaxy Watch 4 Classic</a></li>
+                                        <li><a class="dropdown-item" href="../Smart-watch/galaxyfit.html">Galaxy Fit</a></li>
+                                        <li><a class="dropdown-item" href="../Smart-watch/more_watch.html">Phụ kiện </a></li>
+                                        <li><a class="dropdown-item" href="../Smart-watch/all_watch.html">Xem đồng hồ</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -108,9 +111,9 @@
                                         Phụ kiện
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item" href="#">Phụ kiện kiện máy tính bảng</a></li>
-                                        <li><a class="dropdown-item" href="#">Phụ kiện điện thoại thông minh</a></li>
-                                        <li><a class="dropdown-item" href="#">Tất cả phụ kiện</a></li>
+                                        <li><a class="dropdown-item" href="../Accessory/tab.html">Phụ kiện kiện máy tính bảng</a></li>
+                                        <li><a class="dropdown-item" href="../Accessory/phone.html">Phụ kiện điện thoại thông minh</a></li>
+                                        <li><a class="dropdown-item" href="../Accessory/all.html">Tất cả phụ kiện</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -122,18 +125,18 @@
                                         Tai nghe
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item" href="#">Galaxy Buds</a></li>
-                                        <li><a class="dropdown-item" href="#">Tai nghe AKG</a></li>
-                                        <li><a class="dropdown-item" href="#">Tất cả tai nghe/a></li>
+                                        <li><a class="dropdown-item" href="../Headphone/galaxyBuds.html">Galaxy Buds</a></li>
+                                        <li><a class="dropdown-item" href="../Headphone/AKG.html">Tai nghe AKG</a></li>
+                                        <li><a class="dropdown-item" href="../Headphone/all_headphone.html">Tất cả tai nghe/a></li>
                                     </ul>
                                 </div>
                             </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link disabled text-center">Hệ thông của hàng</a>
-                            </li>
+                            <!-- <li class="nav-item">
+                            </li> -->
 
                         </ul>
+                        <a class="nav-link disabled text-center" href="../address.html">Hệ thống cửa hàng</a>
 
                     </div>
                 </div>
@@ -154,23 +157,23 @@
             <ul class="nav nav-pills">
                 <li class="nav-item">
                     <a class="nav-link adress" href="../address.html">
-                        <i class="fa-solid fa-location-arrow"></i>
+                        <i class="ti-location-arrow"></i>
                         địa chỉ
                     </a>
                 </li>
                 <li class="nav-item icon-sreach">
-                    <a class="nav-link button-search" href="#">
-                        <i class="fa-solid fa-magnifying-glass"></i>
+                    <a class="nav-link" href="#">
+                        <i class="ti-search"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <i class="fa-solid fa-cart-shopping"></i>
+                        <i class="ti-shopping-cart"></i>
                     </a>
                 </li>
                 <div class="phone-number">
                     <a class="nav-link" href="#">
-                        <i class="fa-solid fa-phone"></i>
+                        <i class="ti-mobile"></i>
                         1800 4886
                     </a>
                 </div>
@@ -178,13 +181,7 @@
         </div>
     </div>
 
-    <div class="form-search"style="background-color: rgba(0,0,0,0.8);" >            
-        <form class="example text-name" action="/action_page.php">
-          <input type="text" placeholder="Search.." name="search" class="input" style="color:#fff ;background-color: transparent;border: none;">
-          <button type="submit"></button>
-        
-        </form>
-    </div>
+
     <!-- tabs control -->
 
     <div class="tabs-control">
@@ -240,7 +237,8 @@
                             style="width: 48px; height: 86px;  margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="../Mobile/galaxyA.html" style="font-size: 16px; top: -8px;">Galaxy A</a>
+                                <a href="../Mobile/galaxyA.html" style="font-size: 16px; top: -8px;">Galaxy
+                                    A</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 200px">Những đổi mới của Galaxy đã giúp tất cả mọi người dễ tiếp cận
@@ -274,7 +272,7 @@
                         style="width: 60px; height: 82px; margin:8px 5px 4px 8px;">
                     <div class="text_list" style="margin-top: 20px">
                         <div class="text_list1">
-                            <a href="./tabS.html" style="font-size: 16px; top: -8px;">Galaxy Tab S</a>
+                            <a href="../Tablet/tabS.html" style="font-size: 16px; top: -8px;">Galaxy Tab S</a>
 
                         </div>
                         <div class="text_list2">
@@ -287,7 +285,7 @@
                             style="width: 56px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="./tabA.html" style="font-size: 16px; top: -8px;">Galaxy Tab A</a>
+                                <a href="../Tablet/tabA.html" style="font-size: 16px; top: -8px;">Galaxy Tab A</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 182px;">Nhẹ và cơ động với thiết kế mỏng</p>
@@ -300,7 +298,7 @@
                             style="width: 68px; height: 86px;  margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="./phukienTab.html" style="font-size: 16px; top: -8px;">Phụ kiện</a>
+                                <a href="../Tablet/phukienTab.html" style="font-size: 16px; top: -8px;">Phụ kiện</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 200px">Bao da và hơn thế nữa</p>
@@ -312,7 +310,7 @@
                         <img src="../../img/tab/all_tab.png" alt="" style="width: 88px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="./allTab.html" style="font-size: 16px; top: -8px;">Xem tất cả</a>
+                                <a href="../Tablet/allTab.html" style="font-size: 16px; top: -8px;">Xem tất cả</a>
 
                             </div>
                             <div class="text_list2">
@@ -331,7 +329,7 @@
                     <img src="../../img/watch/watch4.png" alt="" style="width: 60px; height: 78px; margin: 5px 8px;">
                     <div class="text_list" style="margin-top: 20px">
                         <div class="text_list1">
-                            <a href="#" style="font-size: 16px; top: -8px;">Galaxy Watch 4</a>
+                            <a href="../Smart-watch/galaxywatch4.html" style="font-size: 16px; top: -8px;">Galaxy Watch 4</a>
 
                         </div>
                         <div class="text_list2">
@@ -344,7 +342,7 @@
                             style="width: 48px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Galaxy Watch 4 classic</a>
+                                <a href="../Smart-watch/galaxywatch4classic.html" style="font-size: 16px; top: -8px;">Galaxy Watch 4 classic</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 182px;">Một tác phẩm kinh điển thực sự vượt thời gian</p>
@@ -356,7 +354,7 @@
                         <img src="../../img/watch/fit.png" alt="" style="width: 35px; height: 86px;  margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Galaxy Fit</a>
+                                <a href="../Smart-watch/galaxyfit.html" style="font-size: 16px; top: -8px;">Galaxy Fit</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 200px">Tăng cường sức khỏe của bạn</p>
@@ -369,7 +367,7 @@
                             style="width: 48px; height: 86px;  margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Phụ kiện</a>
+                                <a href="../Smart-watch/more_watch.html" style="font-size: 16px; top: -8px;">Phụ kiện</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 200px">Dây đai, bộ sạc và hơn thế nữa</p>
@@ -382,7 +380,7 @@
                             style="width: 86px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Xem đồng hồ</a>
+                                <a href="../Smart-watch/all_watch.html" style="font-size: 16px; top: -8px;">Xem đồng hồ</a>
                             </div>
                             <div class="text_list2">
                                 <p>Xem tất cả đồng hồ của samcenter</p>
@@ -400,7 +398,7 @@
                     <img src="../../img/head_phone/buds.png" alt="" style="width: 82px; height: 86px; margin: 5px 8px;">
                     <div class="text_list" style="margin-top: 20px">
                         <div class="text_list1">
-                            <a href="#" style="font-size: 16px; top: -8px;">Galaxy Buds</a>
+                            <a href="../Headphone/galaxyBuds.html" style="font-size: 16px; top: -8px;">Galaxy Buds</a>
                         </div>
                         <div class="text_list2">
                             <p style="width: 140px;">Âm thanh cân bằng và độ vừa vặn thoải mái</p>
@@ -412,7 +410,7 @@
                             style="width: 58px; height: 86px;  margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Tai nghe AKG</a>
+                                <a href="../Headphone/AKG.html" style="font-size: 16px; top: -8px;">Tai nghe AKG</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 200px">Âm thanh chất lượng studio</p>
@@ -425,7 +423,7 @@
                             style="width: 88px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Tất cả tai nghe</a>
+                                <a href="../Headphone/all_headphone.html" style="font-size: 16px; top: -8px;">Tất cả tai nghe</a>
 
                             </div>
                             <div class="text_list2">
@@ -444,7 +442,7 @@
                     <img src="../../img/more/pk_mb.png" alt="" style="width: 82px; height: 86px; margin: 5px 8px;">
                     <div class="text_list" style="margin-top: 20px">
                         <div class="text_list1">
-                            <a href="#" style="font-size: 16px; top: -8px;">Phụ kiện điện thoại thông minh</a>
+                            <a href="../Accessory/phone.html" style="font-size: 16px; top: -8px;">Phụ kiện điện thoại thông minh</a>
                         </div>
                         <div class="text_list2">
                             <p style="width: 140px;">Ốp lưng và hơn thế nữa</p>
@@ -456,7 +454,7 @@
                             style="width: 72px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Phụ kiện máy tính bảng</a>
+                                <a href="../Accessory/tab.html" style="font-size: 16px; top: -8px;">Phụ kiện máy tính bảng</a>
                             </div>
                             <div class="text_list2">
                                 <p style="width: 182px;">Bao da và hơn thế nữa</p>
@@ -469,7 +467,7 @@
                             style="width: 70px; height: 86px; margin: 5px 8px;">
                         <div class="text_list" style="margin-top: 20px">
                             <div class="text_list1">
-                                <a href="#" style="font-size: 16px; top: -8px;">Tất cả phụ kiện</a>
+                                <a href="../Accessory/all.html" style="font-size: 16px; top: -8px;">Tất cả phụ kiện</a>
 
                             </div>
                             <div class="text_list2">
@@ -500,7 +498,7 @@
         </div>
     </div>
 
-    <div class="lists-phone show-search">
+    <div class="lists-phone">
     
         <a href="">
 
@@ -673,7 +671,6 @@
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
     <script src="../../js/jas.js"></script>
-    <script src="../../js/search.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
